[package]
name = "cas-wasm"
version = "0.1.7"
edition = "2024"
description = "A function wrapper layer for RustCrypto and Dalek-Cryptography."
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
cas-lib = "0.2.74"

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
getrandom_03 = { version = "0.3.4", features = ["wasm_js"], package = "getrandom" }
getrandom_02 = { version = "0.2.17", features = ["js"], package = "getrandom" }
uuid = { version = "1.22.0", features = ["js"] }
